--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "@types/react-redux": "^7.1.34",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.15",
+    "tailwind-styled-components": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,5 +33,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
