--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@types/react-redux": "^7.1.34",
-    "next": "15.1.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.479.0",
+    "next": "^15.3.0-canary.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.2",
     "tailwind-styled-components": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -31,7 +39,8 @@
     "eslint-plugin-react": "^7.37.4",
     "husky": "^9.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.13",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   },
   "resolutions": {
