--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "styled-components": "^6.1.15",
@@ -38,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/throttle-debounce": "^5.0.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "eslint-plugin-react": "^7.37.4",
