--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@types/react-redux": "^7.1.34",
     "bignumber.js": "^9.1.2",
@@ -22,6 +25,7 @@
     "lucide-react": "^0.479.0",
     "next": "^15.3.0-canary.1",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
