--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.74.4",
     "@types/react-redux": "^7.1.34",
     "bignumber.js": "^9.1.2",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
     "next": "^15.3.0-canary.1",
     "next-themes": "^0.4.6",
+    "query-string": "^9.1.1",
     "radix-ui": "^1.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -34,12 +37,14 @@
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "styled-components": "^6.1.15",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tailwind-styled-components": "^2.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.13",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -48,9 +53,10 @@
     "eslint-config-next": "15.1.6",
     "eslint-plugin-react": "^7.37.4",
     "husky": "^9.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^4.0.13",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animated": "^2.0.0",
     "typescript": "^5"
   },
   "resolutions": {
