--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.74.4",
     "@types/react-redux": "^7.1.34",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "bignumber.js": "^9.1.2",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
-    "next": "^15.3.0-canary.1",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "query-string": "^9.1.1",
     "radix-ui": "^1.2.0",
@@ -49,7 +51,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/throttle-debounce": "^5.0.2",
-    "eslint": "^9",
+    "eslint": "^9.25.1",
     "eslint-config-next": "15.1.6",
     "eslint-plugin-react": "^7.37.4",
     "husky": "^9.1.7",
