--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@reduxjs/toolkit": "^2.6.1",
-    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query": "^5.80.6",
     "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
@@ -37,6 +37,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "styled-components": "^6.1.15",
@@ -47,7 +48,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.4",
-    "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
