--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,18 @@
+// {
+//   "semi": true,
+//   "singleQuote": true,
+//   "trailingComma": "es5",
+//   "tabWidth": 2,
+//   "useTabs": false,
+//   "printWidth": 80,
+//   "arrowParens": "always",
+//   "bracketSpacing": true,
+//   "jsxSingleQuote": false,
+//   "quoteProps": "as-needed",
+//   "plugins": ["prettier-plugin-tailwindcss"],
+//   "tailwindConfig": "./tailwind.config.js",
+//   "tailwindFunctions": ["clsx", "cn", "cva"]
+// }
 {
   "semi": true,
   "singleQuote": true,
