--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react": "^7.37.4",
     "husky": "^9.1.7",
     "postcss": "^8.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.4",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^2.0.0",
